--- a/tp5/divs_y_estilo.html
+++ b/tp5/divs_y_estilo.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DIV Y ESTILOS</title>
-    <link rel="stylesheet" href="estilo.css">
-</head>
-<body>
-    <DIV id="contenedor">
-        <div class="titulo">divs y estilos con id y class</div>
-        <div class="subtitulo">box layout</div>
-    </DIV>    
-</body>
+    <link rel="stylesheet" href="estilo.css" />
+  </head>
+  <body>
+    <div id="contenedor">
+      <div class="titulo">divs y estilos con id y class</div>
+      <div class="subtitulo">box layout</div>
+      <div id="box1">box con borde margen y padding</div>
+      <div class="subtitulo">dispocicion de columnas</div>
+      <div id="columna1" class="columna">columna1</div><div id="columna2" class="columna">columna2</div>
+      <div class="subtitulo">galeria procentual</div>
+      <div class="galeriaporcentual">
+        <div class="imagenporcentual">1</div>
+        <div class="imagenporcentual">2</div>
+        <div class="imagenporcentual">3</div>
+        <div class="imagenporcentual">4</div>
+        <div class="imagenporcentual">5</div>
+        <div class="imagenporcentual">6</div>
+        <div class="imagenporcentual">7</div>
+        <div class="imagenporcentual">8</div>
+        <div class="imagenporcentual">9</div>
+        <div class="imagenporcentual">10</div>
+      </div>
+            
+    </div>
+  </body>
 </html>
