--- a/tp10/tp10.html
+++ b/tp10/tp10.html
@@ -11,10 +11,10 @@
         <header>galeria de imagenes</header>
         <nav>
             <a href="#">link 1</a>
-            <a href="#">link 1</a>
-            <a href="#">link 1</a>
-            <a href="#">link 1</a>
-            <a href="#">link 1</a>
+            <a href="#">link 2</a>
+            <a href="#">link 3</a>
+            <a href="#">link 4</a>
+            <a href="#">link 5</a>
         </nav>
         <main>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, dolore delectus error quae laboriosam hic facilis repellendus repellat ullam tenetur quasi impedit ab deserunt quidem corrupti fuga amet voluptates, corporis ipsam blanditiis. Placeat nihil veniam blanditiis! Cumque placeat fuga rem voluptatem laboriosam tempore aliquam quidem libero suscipit omnis consequuntur numquam facere asperiores, animi excepturi iusto molestiae maxime facilis consequatur voluptates impedit! Harum molestiae neque, sapiente saepe deserunt impedit, aliquam aspernatur tempore officia assumenda labore dicta minima. Inventore tenetur est ab facilis, blanditiis reprehenderit accusamus nulla iste iusto porro dignissimos fugit, quidem sapiente quisquam rem neque maxime voluptatem harum dicta? Eaque.
@@ -37,7 +37,7 @@
         <footer>
             design by ross &copy;2024
         </footer>
-        <div id="subir">subir</div>
+        <a href="#contenedor" id="subir">subir</a>
     </div>
 </body>
 </html>
