--- a/tp10_repaso/formulario.html
+++ b/tp10_repaso/formulario.html
@@ -15,7 +15,16 @@
             <a href="la sede">la cede</a>
             <a href="formulario">formulario</a>
         </nav>
-            
+            <form action="" method="post">
+                <span>formulario </span>
+                <hr>
+                <h2>inscripciones 2025</h2>
+                <label for="nombre">nombre</label>
+                <input type="text" name="nombre" id="nombre" placeholder="ingrese su nombre">
+                <label for="apellido">apellido</label>
+                <input type="text" name="apellido" id="apellido" placeholder="ingrese su apellido">
+                <label for="dni">dni</label>
+            </form>
          <footer>programacion web 2025 san martin <img src="im/CFL 2022 V3.png" alt=""></footer>
     </div>
 </body>
