--- a/tp10_repaso/index.html
+++ b/tp10_repaso/index.html
@@ -11,9 +11,9 @@
         <img src="im/CFL 2022 V2.png" alt="">
         <h1>curso de programacion</h1>
         <nav>
-            <a href="home">home</a>
-            <a href="la sede">la cede</a>
-            <a href="formulario">formulario</a>
+            <a href="#">home</a>
+            <a href="lasede.html">la cede</a>
+            <a href="formulario.html">formulario</a>
         </nav>
         <main>
            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident dolores dicta dolore. Exercitationem animi architecto quidem tempore maiores voluptatum. Officia aut ad voluptatem accusamus similique a soluta cupiditate inventore eaque sint, magnam debitis dolorem rerum dolore tenetur vitae modi optio saepe eveniet quaerat eum deleniti. Omnis mollitia, voluptatibus sint veniam sapiente, quasi dignissimos a earum obcaecati placeat laboriosam laudantium quo adipisci consectetur sunt officiis voluptatum commodi quis fuga minima aspernatur id? Tempore, iure. Ex beatae, maxime cumque tempore cum alias dicta minima natus ipsum iste aliquid officiis aspernatur tenetur ab expedita hic reprehenderit libero debitis molestiae sint a vitae provident est? Quae molestiae sit ipsa eaque provident quis error tenetur, eveniet repudiandae expedita id, placeat maxime quibusdam corporis quo! Pariatur sed, ea delectus dicta ipsa fugiat voluptas. Cumque qui ullam, perferendis ab possimus ut error harum. Dicta, sapiente non porro harum quibusdam soluta expedita minus accusantium voluptates ea earum libero cumque voluptatum. Consequuntur esse iusto est et eos consectetur quas earum, temporibus libero similique deleniti perferendis consequatur unde ratione tempora minima modi nulla enim natus sunt vero quo voluptas. Nemo quaerat iusto nobis eum eaque. Quidem tempora quo porro, accusamus rem suscipit? Maxime veritatis fugiat, error fuga unde quo tempora.
