--- a/tp11/02_transiciones.html
+++ b/tp11/02_transiciones.html
@@ -35,6 +35,18 @@
             <div class="barra"></div>
             <div class="barra"></div>
         </div>
+        <h2>afectar elemento child</h2>
+        <div id="espacio">
+            <img src="ufo.png" alt="">
+        </div>
+        <h1>baner</h1>
+        <div id="baner">
+            <h2>ofertas <br>exclucivas</h2>
+            <h3>12 cuotas <br>sin interes</h3>
+            <a href="compra">compra</a>
+            <img src="compu.png" alt="">
+        </div>
+
     </div>   
 </body>
 </html>
