--- a/tp14/tp14.html
+++ b/tp14/tp14.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="contenedor">
-        <head>
+        <header>
             <h1>trabajo practico</h1>
             <nav>
                 <a href="#">link1</a>
@@ -16,15 +16,54 @@
                 <a href="#">link3</a>
                 <a href="#">link4</a>
             </nav>
-        </head>
+        </header>
         <div id="contenido">
             <main>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis quia nam cupiditate facere? Nam dignissimos maxime ad neque! Laudantium est sequi, consectetur at porro fugiat deleniti obcaecati repudiandae doloremque ab. Placeat tenetur explicabo ex, quia consectetur vitae eum praesentium provident! Dolorum alias vero ratione corrupti possimus voluptatem, fugiat itaque distinctio.</main>
             <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus quia culpa veniam tempora in. Suscipit.</section>
-            <nav>accion</nav>
+            <a href="accion">accion</a>
             <img src="https://picsum.photos/300/300?random=1" alt="">
         </div>
-        <div id="conenido1">
-            
+        <div id="votonera">
+            <div class="voton" id="voton1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente deleniti minima pariatur dolores voluptates debitis?c <a href="#">accion</a></div>
+            <div class="voton" id="voton2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente deleniti minima pariatur dolores voluptates debitis?c <a href="#">accion</a></div>
+            <div class="voton" id="voton3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente deleniti minima pariatur dolores voluptates debitis?c <a href="accion">accion</a></div>
+            <div class="voton" id="voton4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente deleniti minima pariatur dolores voluptates debitis?c <a href="accion">accion</a></div>
+            <div class="voton" id="voton5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente deleniti minima pariatur dolores voluptates debitis?c <a href="accion">accion</a></div>
+        </div>
+        <div id="animacion">
+            <div class="barra" id="barra1"></div>
+            <div class="barra" id="barra2"></div>
+            <div class="barra" id="barra3"></div>
+            <div class="barra" id="barra4"></div>
+            <div class="barra" id="barra5"></div>
+        </div>
+        <section id="section2">
+            <div class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vero nemo cum ea sed, repudiandae molestiae esse minus. Amet ea, eos odit vitae tempora fugiat corrupti commodi excepturi, eum labore similique atque. Eveniet nesciunt voluptas fuga vel alias et nulla. Nobis magnam autem in perspiciatis consequuntur inventore similique quidem illum!</div>
+            <div class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reprehenderit sed tenetur quidem quibusdam corporis tempore atque repellat! Mollitia similique voluptate quos, voluptates velit modi blanditiis, quae quam, nam dolor tempore distinctio iure molestias amet sed rerum libero ratione aliquam?</div>
+        </section>
+        <section id="galeria">
+            <img src="https://picsum.photos/300/300?random=2" alt="">
+            <img src="https://picsum.photos/300/300?random=3" alt="">
+            <img src="https://picsum.photos/300/300?random=4" alt="">
+            <img src="https://picsum.photos/300/300?random=5" alt="">
+            <img src="https://picsum.photos/300/300?random=6" alt="">
+            <img src="https://picsum.photos/300/300?random=7" alt="">
+            <img src="https://picsum.photos/300/300?random=8" alt="">
+            <img src="https://picsum.photos/300/300?random=9" alt="">
+        </section>
+        <div id="testimonios">
+            <img src="img/d51cecbc9f8ec148c8c72e7767ae3539.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur provident excepturi qui repellat, hic earum?</p>
+            <div>
+                <form action="" method="post">
+                    <span>formulario </span>
+                    <hr>
+                    <h2>dejame un mensaje</h2>
+                    <label for="nombre">nombre</label>
+                    <input type="text" name="nombre" id="nombre" placeholder="ingrese su nombre">
+                    <label for="contacto">contacto</label>
+                </form>
+            </div>
         </div>
     </div>
 </body>
