inicio de javascript

--- a/tp14/tp14.html
+++ b/tp14/tp14.html
@@ -62,6 +62,8 @@
                     <label for="nombre">nombre</label>
                     <input type="text" name="nombre" id="nombre" placeholder="ingrese su nombre">
                     <label for="contacto">contacto</label>
+                     <input type="text">
+                     
                 </form>
             </div>
         </div>
