--- a/tp22/tp22_04.html
+++ b/tp22/tp22_04.html
@@ -23,12 +23,36 @@
        *30grs de manteca <br>
        *1 huevo
        <input type="text" id="comensales" placeholder="cantidad de comensales">
+       
        <span>
         <div class="btn" id="btnej2">calcular</div>
         <div class="salida" id="salidaej2">..respuesta</div>
        </span>
     </div>
 
+    <div class="ejercicio" id="ej3">
+        <h1>acumulador de nombre</h1>
+        <input type="text"  id="asistentes" placeholder="nombre del asistente">
+        <span>
+            <div class="btn" id="btnej3-1">agregar</div>
+            <div class="btn" id="btnej3-2">ver</div>
+            <div class="salida" id="salidaej3">.....respuesta</div>
+        </span>
+    </div>
+    <div class="ejercicio" id="ej4">
+        <h1>carrito de compre</h1>
+        <span>items: <span id="contador">0</span></span>
+        <span>
+            <div class="producto">remera roja <div class="btn" id="sumaprod0">agregar</div></div>
+            <div class="producto">remera verde <div class="btn" id="sumaprod1">agregar</div></div>
+            <div class="producto">remera azul <div class="btn" id="sumaprod2">agregar</div></div>
+        </span>
+        <span>
+            <div class="btn" id="btnej4-1">ver</div>
+            <div class="btn" id="btnej4-2">vaciar</div>
+            <div class="salida" id="salidaej3">.....respuesta</div>
+        </span>
+    </div>
 
     <script src="script/scripi04.js"></script>
 </body>
