--- a/tp25/02_tareas.html
+++ b/tp25/02_tareas.html
@@ -10,7 +10,8 @@
     
     <div id="caja">
         <h1>lista de tareas</h1>
-        <input type="text">
+        <input type="text" id="texto">
+        
     </div>
 
 
