--- a/tp25/02_tareas.html
+++ b/tp25/02_tareas.html
@@ -10,9 +10,35 @@
     
     <div id="caja">
         <h1>lista de tareas</h1>
-        <input type="text" id="texto">
         
-    </div>
+        <div id="agregartarea">
+            <h3>agregar tarea</h3>
+            <input type="text"  id="tareas">
+            <div class="btn" id="btnAgregar">agregar</div>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>tarea</th>
+                    <th>estado</th>
+                    <th>modific</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- <tr>
+                    <td>0</td>
+                    <td>cocinar</td>
+                    <td><div class="btn btnCompleta">completar</div></td>
+                    <td>
+                        <div class="btn btnEditar">editar</div>
+                        <div class="btn btnBorrar">borrar</div>
+                    </td>
+                </tr> -->
+            </tbody>
+        </table>
+
+     </div>
 
 
     <script src="script/02_script.js"></script>
