--- a/tp25/02_tareas.html
+++ b/tp25/02_tareas.html
@@ -40,7 +40,24 @@
 
      </div>
 
-
+<div id="cortina">
+<div id="contmodificartarea">
+    <h2>modifir tarea</h2>
+    <span>id</span>
+    <input type="text" id="modificarid" disabled readonly>
+    <span>tarea</span>
+    <input type="text" id="modificartarea">
+    <span>estado</span>
+    <select  id="modificarestado">
+        <option value="pendiente">pendiente</option>
+        <option value="completa">completa</option>
+    </select>
+    <span>
+        <div class="btn" id="btnmodificartarea">modificar</div>
+        <div class="btn" id="btncanselarmodificartarea">canselar</div>
+    </span>
+</div>
+</div>
     <script src="script/02_script.js"></script>
 </body>
 </html>
