--- a/tp27/01_fetch.html
+++ b/tp27/01_fetch.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fetch</title>
+    <link rel="stylesheet" href="css/01_estilo.css">
 </head>
 <body>
     <h1>fetch</h1>
     <div id="txt"></div>
+
 
     <script src="script/01_script.js"></script>
 </body>
